# contextd

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  QUICKSTART.md  README.md  contextd.spec  pyproject.toml
.claude/: settings.json  wiki.json
.codex/: hooks.json
.contextd/: config.json  manifest.json  manifest.schema.json
.github/: pull_request_template.md
agents/: coding-rules.md  constraints.md  cross-cutting-principles.md  system-prompt.md
docs/: build-system-model.md  comparison.md  context-quality.md  effectiveness.md  evaluation.md  governance.md  mcp.md  pack-validation.md  team-sync.md  wiki-reference.md
onboarding/: index.en.html  index.html  install.en.html  install.html
packs/: README.md
release/: install.ps1  install.sh
scripts/: build-binary.sh  check-patterns-index.py  cli.py  cmd_bundle.py  cmd_contract_path.py  cmd_doctor.py  cmd_eval.py  cmd_explain.py  cmd_find.py  cmd_mcp_config.py  cmd_migrate_config.py  cmd_pack_validate.py  cmd_policy_check.py  cmd_resolve.py  cmd_task_context.py  contextd-team-sync.sh  detect_repetition.py  emit_trace.py  generate_manifest.py  install-to-claude.py  install-to-claude.sh  lint-wiki.py  mcp_server.py  pack_loader.py  package-release.sh  render_runtime.py  render_trace.py  scaffold-pack.py  setup-codex-instructions.sh  setup-codex-skills.sh  setup-team-knowledge.sh  test_atomic_write.py  test_contextd_runtime.py  test_detect_repetition.py  test_lint_wiki.py  validate.py
templates/: adr.md  agentic-engine-snapshot.md  bundle.yaml  code-snapshot.md  context-policy.schema.json  (+32 more)
(+354 files in other folders)
